--- a/main/login.html
+++ b/main/login.html
@@ -54,8 +54,8 @@ Clerk Publishable Key and Frontend API URL -->
 <script
   async
   crossorigin="anonymous"
-  data-clerk-publishable-key="pk_test_YWR2YW5jZWQtaGVybWl0LTE2LmNsZXJrLmFjY291bnRzLmRldiQ"
-  src="https://advanced-hermit-16.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+  data-clerk-publishable-key="pk_test_ZWFnZXItZmF3bi01LmNsZXJrLmFjY291bnRzLmRldiQ"
+  src="https://eager-fawn-5.clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
   type="text/javascript"
 ></script>
 
