--- a/main/login.html
+++ b/main/login.html
@@ -67,26 +67,22 @@ Clerk Publishable Key and Frontend API URL -->
     let statusMessage = "";
 
     if (Clerk.user) {
-        // Extract the email address from Clerk.user.
-        const email = (Clerk.user.emailAddresses &&
-                       Clerk.user.emailAddresses[0] &&
-                       Clerk.user.emailAddresses[0].emailAddress) || "Unknown Email";
-        
-        // Check if the email is from @uchicago.edu (case-insensitive) or if the public metadata flags them as a customer.
-        if (email.toLowerCase().endsWith("@uchicago.edu") ||
-            (Clerk.user.publicMetadata && Clerk.user.publicMetadata.isCustomer === true)) {
-          statusMessage = `Logged in as ${email}: Authorized`;
-          button = `<br><a class="view-content-button" href="index_auth.html">View Content</a>`;
-        } else {
-          statusMessage = `Logged in as ${email}: Not authorized`;
-          button = ``;
-        }
-        content = `<div id="user-button"></div>`;
+      // Extract the email address from Clerk.user.
+      const email = (Clerk.user.emailAddresses && Clerk.user.emailAddresses[0] && Clerk.user.emailAddresses[0].emailAddress) || "Unknown Email";
+      
+      if (Clerk.user.publicMetadata && Clerk.user.publicMetadata.isCustomer === true) {
+        statusMessage = `Logged in as ${email}: Authorized`;
+        button = `<br><a class="view-content-button" href="index.html">View Content</a>`
       } else {
-        statusMessage = "Not logged in";
-        content = `<div id="sign-in"></div>`;
-        button = ``;
+        statusMessage = `Logged in as ${email}: Not authorized`;
+        button = ``
       }
+      content = `<div id="user-button"></div>`;
+    } else {
+      statusMessage = "Not logged in";
+      content = `<div id="sign-in"></div>`;
+      button = ``
+    }
 
     // Render the UI along with our status message and add a red "View Content" button linking to "index.html"
     document.getElementById('app').innerHTML = `<p>${statusMessage}</p>` + content + button;
